objects/ObjectForTest__c.object
<CustomObject>
    <fields>
        <fullName>ExternalField__c</fullName>
        <externalId>true</externalId>
        <label>ExternalField</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ObjectForTest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ObjectForTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ObjectForTests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>